# image_convert20

./: README.md
convert/: CMakeLists.txt  Makefile.ux  argz.hpp  conv.cpp
convert/gui/: CMakeLists.txt  Makefile  README.md
convert/gui/src/: converter.cpp  converter.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp
