cmake_minimum_required(VERSION 3.5 FATAL_ERROR)
project(image_convert20 LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQURIED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
find_package(OpenCV REQUIRED)
include_directories(${CMAKE_SOURCE_DIR}  ${CMAKE_SOURCE_DIR} ${OpenCV_INCLUDE_DIRS} /usr/local/include) 
link_directories(/usr/local/lib /usr/lib)
add_executable(image_convert20 conv.cpp)
target_link_libraries(image_convert20 ${OpenCV_LIBS})
install(TARGETS image_convert20 DESTINATION bin)
